feat(pack): v0.2.0 — branding clean-up, JEI→EMI, GC revert, DH/SimpleBackups tuning
Rolls up the work that was on the 0.1.3 line — the tag wasn't cut at 0.1.3
because testing surfaced enough additional fixes to warrant a minor bump.

Highlights:
- Re-packed AllTheTweaks jar strips ATM10 branding (TitleWin + NameBrandsOnly
  mixins, mojangstudios.png override, panorama textures). Re-hosted via
  packwiz URL mode at pack/local-jars/, served from raw.githubusercontent.com.
- JEI → EMI: 8 JEI ecosystem mods removed, 7 EMI mods + fzzy_config added.
  EMI builds its index on a worker thread — no more 40s "Loading Terrain"
  hang waiting on JEI runtime construction.
- Shader: BSL + Clrwl 1.0.5 (native Create-Colorwheel support), LOW profile.
- DH tuned: enableDistantGeneration=false, 4 threads, 256-chunk radius,
  5-dim ignoredDimensionCsv covering only true interior/instanced dims.
- SimpleBackups: MODIFIED_SINCE_LAST + saveAll=false + 6h interval — kills
  the 3-minute server-thread freeze on world load.
- JVM reverted G1 (ZGC OOM'd on 12GB heap with this workload). Heap bumped
  12 → 16 GB; MinMemAlloc = MaxMemAlloc to skip resize churn.
- KubeJS: 158 ARR header lines stripped, 9 datapack stubs for broken
  recipes (false neoforge:conditions), update_checker/incompatible_versions/
  announcements deleted (all three had DefaultArtifactVersion → String cast
  bugs).
- Aeroborne quest book item IDs corrected (create_aeronautics → create,
  bigcannons → createbigcannons, creating_space → creatingspace).
- Cubes Without Borders 3.0.0 + Chunky 1.4.23 added.
- EuphoriaPatcher removed (required ComplementaryShaders base not shipped).
- docs/PERFORMANCE.md tier-A-through-D tuning guide written.
- servers.dat pre-populated with ayn.meicloud.net:55565.

User-tuned configs preserved: options.txt, sodium-options.json, emi.css,
darkmodeeverywhereshaders.json, lambdynlights.toml, colorwheel-client.toml,
flywheel-client.toml, iris.properties.

Co-Authored-By: Claude Opus 4.7 <noreply@a